[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/misc/mushroom/ennemy.png" type="Texture" id=1]
[ext_resource path="res://Src/Actors/EnnemyShooter.gd" type="Script" id=2]
[ext_resource path="res://assets/misc/mushroom/mush.wav" type="AudioStream" id=3]
[ext_resource path="res://src/Objects/BounceArea.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/Materials/flash_shadermaterial.tres" type="Material" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 13 )

[sub_resource type="CircleShape2D" id=2]
radius = 384.333

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 16 )

[sub_resource type="Animation" id=5]
resource_name = "hit"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.001, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=4]
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ennemy:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 3.14, 0.116629 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.25 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ennemy:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 3.14, 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ), Vector2( 0, -4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ennemy:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true, false, true, false, true, false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AudioStreamPlayer2D:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="EnnemyShooter" type="KinematicBody2D"]
material = ExtResource( 5 )
z_as_relative = false
collision_layer = 2
collision_mask = 329
script = ExtResource( 2 )

[node name="ennemy" type="Sprite" parent="."]
use_parent_material = true
position = Vector2( 0, -16 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -13 )
shape = SubResource( 1 )

[node name="DetectionZone" type="Area2D" parent="."]
collision_layer = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionZone"]
modulate = Color( 0.780392, 0.0392157, 0.862745, 0.321569 )
position = Vector2( 0, -16 )
shape = SubResource( 2 )

[node name="BounceArea" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BounceArea"]
position = Vector2( 0, -16 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 5 )
anims/stomped = SubResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, -13 )
stream = ExtResource( 3 )
volume_db = 7.61
bus = "Sound"

[node name="Vision" type="RayCast2D" parent="."]
modulate = Color( 1, 0, 0, 1 )
self_modulate = Color( 0.517647, 0.192157, 0.192157, 1 )
position = Vector2( 0, -16 )
enabled = true
collision_mask = 8

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="body_entered" from="DetectionZone" to="." method="_on_DetectionZone_body_entered"]
[connection signal="body_exited" from="DetectionZone" to="." method="_on_DetectionZone_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
